added dynamic sentences

--- a/query_examples.ipynb
+++ b/query_examples.ipynb
@@ -138,6 +138,13 @@
     "\n",
     "```json\n",
     "{'synth_roun': ['R1', 'R2', 'R3']}\n",
+    "```\n",
+    "\n",
+    "The data in the SQL table are refrenced by the above codes, however, they should be exposed to the user as the following (including in all figures and instances). I.e. the user should see the below mapping and not R1 etc.\n",
+    "```json\n",
+    "{\"R1\":\"SYNTHESYS (2004 - 2009)\",\n",
+    " \"R2\":\"SYNTHESYS2 (2009 - 2013)\",\n",
+    " \"R3\":\"SYNTHESYS3 (2013 - 2017)\"}\n",
     "```"
    ]
   },
@@ -1469,7 +1476,218 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## WIDGET:\n"
+    "## DYNAMIC SENTENCES\n",
+    "\n",
+    "Note, depending on the filter page, a different sentence will be needed. You will also need metadata json to construct these in some cases (all provided here).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://synthesys.carto.com/api/v2/sql?q=SELECT+COUNT%28DISTINCT%28synthesys.home_insti%29%29+as+institutes%2C%0A++++++++++++COUNT%28synthesys.visit_days%29+AS+total_visitors%2C%0A++++++++++++SUM%28synthesys.visit_days%29+AS+days%0A++++++++++++FROM+sanitized_data+AS+synthesys%0A++++++++++++WHERE+synthesys.visit_days+IS+NOT+null\n",
+      "{'fields': {'days': {'type': 'number'},\n",
+      "            'institutes': {'type': 'number'},\n",
+      "            'total_visitors': {'type': 'number'}},\n",
+      " 'rows': [{'days': 69472, 'institutes': 767, 'total_visitors': 5718}],\n",
+      " 'time': 0.009,\n",
+      " 'total_rows': 1}\n",
+      "\n",
+      "5,718 vistors, from 767 institutes, were granted a total of 69,472 research days.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# No filter (should appear immediatley on the dashboard page, and the json can be embedded for speed)\n",
+    "\n",
+    "query = \"\"\"SELECT COUNT(DISTINCT(synthesys.home_insti)) as institutes,\n",
+    "            COUNT(synthesys.visit_days) AS total_visitors,\n",
+    "            SUM(synthesys.visit_days) AS days\n",
+    "            FROM sanitized_data AS synthesys\n",
+    "            WHERE synthesys.visit_days IS NOT null\"\"\"\n",
+    "sql = {\"q\": query}\n",
+    "account = 'synthesys'\n",
+    "urlCarto = f\"https://{account}.carto.com/api/v2/sql\"\n",
+    "r = requests.get(urlCarto, params=sql)\n",
+    "print(r.url)\n",
+    "pprint.pprint(r.json())\n",
+    "r.json()\n",
+    "\n",
+    "\n",
+    "days = r.json().get('rows')[0].get('days')\n",
+    "institutes = r.json().get('rows')[0].get('institutes')\n",
+    "total_visitors = r.json().get('rows')[0].get('total_visitors')\n",
+    "\n",
+    "print(f\"\\n {} {total_visitors:,g} vistors, from {institutes:,g} institutes, were granted a total of {days:,g} research days.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iso2_dic = {'AL': 'Albania', 'AT': 'Austria', 'BA': 'Bosnia and Herzegovina', 'BE': 'Belgium', 'BG': 'Bulgaria', 'CH': 'Switzerland', 'CY': 'Cyprus', 'CZ': 'Czech Republic', 'DE': 'Germany', 'DK': 'Denmark', 'EE': 'Estonia', 'ES': 'Spain', 'FI': 'Finland', 'FR': 'France', 'GB': 'United Kingdom', 'GF': 'French Guiana', 'GR': 'Greece', 'HR': 'Croatia', 'HU': 'Hungary', 'IE': 'Ireland', 'IL': 'Israel', 'IS': 'Iceland', 'IT': 'Italy', 'LI': 'Liechtenstein', 'LT': 'Lithuania', 'LU': 'Luxembourg', 'LV': 'Latvia', 'MK': 'Macedonia', 'MT': 'Malta', 'NL': 'Netherlands', 'NO': 'Norway', 'PL': 'Poland', 'PS': 'Palestina', 'PT': 'Portugal', 'RE': 'Reunion', 'RO': 'Romania', 'RS': 'Serbia', 'SE': 'Sweden', 'SI': 'Slovenia', 'SK': 'Slovakia', 'TR': 'Turkey'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://synthesys.carto.com/api/v2/sql?q=WITH+gadm28+AS+%28SELECT+the_geom_webmercator%2C+iso2+FROM++gadm28_countries+WHERE+iso2+%3D+%27ES%27%29%0A++++++++++++SELECT+COUNT%28DISTINCT%28synthesys.home_insti%29%29+as+institutes%2C%0A++++++++++++COUNT%28synthesys.visit_days%29+AS+total_visitors%2C%0A++++++++++++SUM%28synthesys.visit_days%29+AS+days%0A++++++++++++FROM+sanitized_data+AS+synthesys%2C+gadm28%0A++++++++++++WHERE+ST_Intersects%28gadm28.the_geom_webmercator%2C+synthesys.the_geom_webmercator%29%0A++++++++++++AND+synthesys.visit_days+IS+NOT+null\n",
+      "{'fields': {'days': {'type': 'number'},\n",
+      "            'institutes': {'type': 'number'},\n",
+      "            'total_visitors': {'type': 'number'}},\n",
+      " 'rows': [{'days': 6315, 'institutes': 87, 'total_visitors': 500}],\n",
+      " 'time': 0.076,\n",
+      " 'total_rows': 1}\n",
+      "\n",
+      "Spain had 500 vistors, from 87 institutes, and was granted a total of 6,315 research days.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filter by country \n",
+    "\n",
+    "iso2_var = 'ES'\n",
+    "query = f\"\"\"WITH gadm28 AS (SELECT the_geom_webmercator, iso2 FROM  gadm28_countries WHERE iso2 = '{iso2_var}')\n",
+    "            SELECT COUNT(DISTINCT(synthesys.home_insti)) as institutes,\n",
+    "            COUNT(synthesys.visit_days) AS total_visitors,\n",
+    "            SUM(synthesys.visit_days) AS days\n",
+    "            FROM sanitized_data AS synthesys, gadm28\n",
+    "            WHERE ST_Intersects(gadm28.the_geom_webmercator, synthesys.the_geom_webmercator)\n",
+    "            AND synthesys.visit_days IS NOT null\"\"\"\n",
+    "sql = {\"q\": query}\n",
+    "account = 'synthesys'\n",
+    "urlCarto = f\"https://{account}.carto.com/api/v2/sql\"\n",
+    "r = requests.get(urlCarto, params=sql)\n",
+    "print(r.url)\n",
+    "pprint.pprint(r.json())\n",
+    "r.json()\n",
+    "\n",
+    "country = iso2_dic[iso2_var]\n",
+    "days = r.json().get('rows')[0].get('days')\n",
+    "institutes = r.json().get('rows')[0].get('institutes')\n",
+    "total_visitors = r.json().get('rows')[0].get('total_visitors')\n",
+    "\n",
+    "print(f\"\\n{country} had {total_visitors:,g} vistors, from {institutes:,g} institutes, and was granted a total of {days:,g} research days.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://synthesys.carto.com/api/v2/sql?q=SELECT+COUNT%28DISTINCT%28synthesys.home_insti%29%29+as+institutes%2C%0A++++++++++++COUNT%28synthesys.visit_days%29+AS+total_visitors%2C%0A++++++++++++SUM%28synthesys.visit_days%29+AS+days%0A++++++++++++FROM+sanitized_data+AS+synthesys%0A++++++++++++WHERE+synthesys.visit_days+IS+NOT+null%0A++++++++++++AND+synthesys.discipline+%3D+%27Humanities%27%0A++++++++++++\n",
+      "{'fields': {'days': {'type': 'number'},\n",
+      "            'institutes': {'type': 'number'},\n",
+      "            'total_visitors': {'type': 'number'}},\n",
+      " 'rows': [{'days': 478, 'institutes': 26, 'total_visitors': 38}],\n",
+      " 'time': 0.012,\n",
+      " 'total_rows': 1}\n",
+      "\n",
+      " A total of 38 vistors related to Humanities disciplines came from 26 institutes, and were granted a total of 478 research days.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filter by discipline\n",
+    "\n",
+    "discipline_var = 'Humanities'\n",
+    "query = f\"\"\"SELECT COUNT(DISTINCT(synthesys.home_insti)) as institutes,\n",
+    "            COUNT(synthesys.visit_days) AS total_visitors,\n",
+    "            SUM(synthesys.visit_days) AS days\n",
+    "            FROM sanitized_data AS synthesys\n",
+    "            WHERE synthesys.visit_days IS NOT null\n",
+    "            AND synthesys.discipline = '{discipline_var}'\n",
+    "            \"\"\"\n",
+    "sql = {\"q\": query}\n",
+    "account = 'synthesys'\n",
+    "urlCarto = f\"https://{account}.carto.com/api/v2/sql\"\n",
+    "r = requests.get(urlCarto, params=sql)\n",
+    "print(r.url)\n",
+    "pprint.pprint(r.json())\n",
+    "r.json()\n",
+    "\n",
+    "\n",
+    "days = r.json().get('rows')[0].get('days')\n",
+    "institutes = r.json().get('rows')[0].get('institutes')\n",
+    "total_visitors = r.json().get('rows')[0].get('total_visitors')\n",
+    "\n",
+    "print(f\"\"\"\\n A total of {total_visitors:,g} vistors related to {discipline_var} disciplines came from {institutes:,g} institutes, and were granted a total of {days:,g} research days.\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "funding_rounds = {\"R1\":\"SYNTHESYS (2004 - 2009)\", \"R2\":\"SYNTHESYS2 (2009 - 2013)\",\"R3\":\"SYNTHESYS3 (2013 - 2017)\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://synthesys.carto.com/api/v2/sql?q=SELECT+COUNT%28DISTINCT%28synthesys.home_insti%29%29+as+institutes%2C%0A++++++++++++COUNT%28synthesys.visit_days%29+AS+total_visitors%2C%0A++++++++++++SUM%28synthesys.visit_days%29+AS+days%0A++++++++++++FROM+sanitized_data+AS+synthesys%0A++++++++++++WHERE+synthesys.visit_days+IS+NOT+null%0A++++++++++++AND+synthesys.synth_roun+%3D+%27R3%27%0A++++++++++++\n",
+      "{'fields': {'days': {'type': 'number'},\n",
+      "            'institutes': {'type': 'number'},\n",
+      "            'total_visitors': {'type': 'number'}},\n",
+      " 'rows': [{'days': 15388, 'institutes': 376, 'total_visitors': 1507}],\n",
+      " 'time': 0.008,\n",
+      " 'total_rows': 1}\n",
+      "\n",
+      " A total of 1,507 vistors came in SYNTHESYS3 (2013 - 2017), from 376 institutes, and were granted a total of 15,388 research days.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filter by funding round\n",
+    "\n",
+    "funding_round_var = 'R3'\n",
+    "query = f\"\"\"SELECT COUNT(DISTINCT(synthesys.home_insti)) as institutes,\n",
+    "            COUNT(synthesys.visit_days) AS total_visitors,\n",
+    "            SUM(synthesys.visit_days) AS days\n",
+    "            FROM sanitized_data AS synthesys\n",
+    "            WHERE synthesys.visit_days IS NOT null\n",
+    "            AND synthesys.synth_roun = '{funding_round_var}'\n",
+    "            \"\"\"\n",
+    "sql = {\"q\": query}\n",
+    "account = 'synthesys'\n",
+    "urlCarto = f\"https://{account}.carto.com/api/v2/sql\"\n",
+    "r = requests.get(urlCarto, params=sql)\n",
+    "print(r.url)\n",
+    "pprint.pprint(r.json())\n",
+    "r.json()\n",
+    "\n",
+    "funding_round = funding_rounds[funding_round_var]\n",
+    "days = r.json().get('rows')[0].get('days')\n",
+    "institutes = r.json().get('rows')[0].get('institutes')\n",
+    "total_visitors = r.json().get('rows')[0].get('total_visitors')\n",
+    "\n",
+    "print(f\"\"\"\\n A total of {total_visitors:,g} vistors came in {funding_round}, from {institutes:,g} institutes, and were granted a total of {days:,g} research days.\"\"\")"
    ]
   },
   {
