added treemap widget info

--- a/query_examples.ipynb
+++ b/query_examples.ipynb
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -1444,14 +1444,7 @@
      "output_type": "stream",
      "text": [
       "https://synthesys.carto.com/api/v2/sql?q=SELECT+synthesys.researcher%2C+count%28%2A%29%0A++++++++++++FROM+sanitized_data+AS+synthesys%0A++++++++++++WHERE+synthesys.researcher+IS+NOT+null%0A++++++++++++AND+synthesys.funding_ro+%3D+%27R1%27%0A++++++++++++GROUP+BY+synthesys.researcher%0A++++++++++++ORDER+BY+synthesys.count+ASC\n",
-      "{'fields': {'count': {'type': 'number'}, 'researcher': {'type': 'string'}},\n",
-      " 'rows': [{'count': 16, 'researcher': 'TEC'},\n",
-      "          {'count': 67, 'researcher': 'UND'},\n",
-      "          {'count': 898, 'researcher': 'PDOC'},\n",
-      "          {'count': 917, 'researcher': 'PGR'},\n",
-      "          {'count': 1017, 'researcher': 'EXP'}],\n",
-      " 'time': 0.006,\n",
-      " 'total_rows': 5}\n"
+      "{'error': ['cannot connect to the database']}\n"
      ]
     }
    ],
@@ -1464,6 +1457,299 @@
     "            AND synthesys.funding_ro = '{funding_round_var}'\n",
     "            GROUP BY synthesys.researcher\n",
     "            ORDER BY synthesys.count ASC\"\"\"\n",
+    "sql = {\"q\": query}\n",
+    "account = 'synthesys'\n",
+    "urlCarto = f\"https://{account}.carto.com/api/v2/sql\"\n",
+    "r = requests.get(urlCarto, params=sql)\n",
+    "print(r.url)\n",
+    "pprint.pprint(r.json())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Widgets: Institute visited\n",
+    "\n",
+    "This should be a [Treemaps](https://en.wikipedia.org/wiki/Treemapping) showing where the researchers go to on their visits (which specific institutes). The size of each box should relate to the counts. The counts and institute name should be viewable on hover. Colours should be fixed according to the style guide.\n",
+    "\n",
+    "\n",
+    "Note: There are 47 unique institutes. The mapping of institute ID to human readable strings is given in JSON below). Also, I think that you can decide, depending on your best judgement regarding how the figure looks to aggregate institutes with few visits (into an 'Other') category.\n",
+    "\n",
+    "This widget should appear on all dashboard pages:\n",
+    "* No filter\n",
+    "* By country\n",
+    "* By discipline\n",
+    "* By funding round"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://synthesys.carto.com/api/v2/sql?q=SELECT+synthesys.inst_short+AS+institute%2C+count%28%2A%29%0A++++++++++++FROM+sanitized_data+AS+synthesys%0A++++++++++++WHERE+synthesys.inst_short+IS+NOT+null%0A++++++++++++GROUP+BY+synthesys.inst_short%0A++++++++++++ORDER+BY+synthesys.count+DESC\n",
+      "{'fields': {'count': {'type': 'number'}, 'institute': {'type': 'string'}},\n",
+      " 'rows': [{'count': 484, 'institute': 'COLL'},\n",
+      "          {'count': 413, 'institute': 'NHM COL'},\n",
+      "          {'count': 408, 'institute': 'NHM COL MOL'},\n",
+      "          {'count': 390, 'institute': 'NHMW'},\n",
+      "          {'count': 338, 'institute': 'NRM'},\n",
+      "          {'count': 311, 'institute': 'CSIC'},\n",
+      "          {'count': 299, 'institute': 'NHM AIF'},\n",
+      "          {'count': 229, 'institute': 'RBINS'},\n",
+      "          {'count': 207, 'institute': 'COL'},\n",
+      "          {'count': 200, 'institute': 'ZBGM'},\n",
+      "          {'count': 165, 'institute': 'KEW'},\n",
+      "          {'count': 161, 'institute': 'UCPH'},\n",
+      "          {'count': 154, 'institute': 'RMCA'},\n",
+      "          {'count': 125, 'institute': 'INST'},\n",
+      "          {'count': 119, 'institute': 'NAT'},\n",
+      "          {'count': 118, 'institute': 'MfN COL'},\n",
+      "          {'count': 94, 'institute': 'MfN ZOO'},\n",
+      "          {'count': 81, 'institute': 'NHM LAB'},\n",
+      "          {'count': 80, 'institute': 'EDIN'},\n",
+      "          {'count': 76, 'institute': 'SEM'},\n",
+      "          {'count': 73, 'institute': 'MfN LAB'},\n",
+      "          {'count': 73, 'institute': 'NMP'},\n",
+      "          {'count': 71, 'institute': 'MOL LAB'},\n",
+      "          {'count': 71, 'institute': 'EDINBURGH'},\n",
+      "          {'count': 69, 'institute': 'NNM'},\n",
+      "          {'count': 68, 'institute': 'BGBM COL'},\n",
+      "          {'count': 65, 'institute': 'MfN PAL'},\n",
+      "          {'count': 62, 'institute': 'UVA'},\n",
+      "          {'count': 60, 'institute': 'PROBE'},\n",
+      "          {'count': 56, 'institute': 'MASS'},\n",
+      "          {'count': 56, 'institute': 'NHN'},\n",
+      "          {'count': 53, 'institute': 'LAB'},\n",
+      "          {'count': 52, 'institute': 'BGBM HERB'},\n",
+      "          {'count': 45, 'institute': 'BGBM LAB'},\n",
+      "          {'count': 39, 'institute': 'IMAGE'},\n",
+      "          {'count': 39, 'institute': 'SGN COL'},\n",
+      "          {'count': 38, 'institute': 'MIZPAN'},\n",
+      "          {'count': 35, 'institute': 'CBS'},\n",
+      "          {'count': 32, 'institute': 'BGBM SEM'},\n",
+      "          {'count': 30, 'institute': 'NGB'},\n",
+      "          {'count': 29, 'institute': 'SGN LAB'},\n",
+      "          {'count': 29, 'institute': 'BGBM LIVING'},\n",
+      "          {'count': 28, 'institute': 'SMNS'},\n",
+      "          {'count': 27, 'institute': 'MfN MIN'},\n",
+      "          {'count': 27, 'institute': 'MORPH'},\n",
+      "          {'count': 24, 'institute': 'BGBM MOL LAB'},\n",
+      "          {'count': 15, 'institute': 'ENZYME'}],\n",
+      " 'time': 0.022,\n",
+      " 'total_rows': 47}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Treemap widget for collection visited type: no filter\n",
+    "\n",
+    "query = \"\"\"SELECT synthesys.inst_short AS institute, count(*)\n",
+    "            FROM sanitized_data AS synthesys\n",
+    "            WHERE synthesys.inst_short IS NOT null\n",
+    "            GROUP BY synthesys.inst_short\n",
+    "            ORDER BY synthesys.count DESC\"\"\"\n",
+    "sql = {\"q\": query}\n",
+    "account = 'synthesys'\n",
+    "urlCarto = f\"https://{account}.carto.com/api/v2/sql\"\n",
+    "r = requests.get(urlCarto, params=sql)\n",
+    "print(r.url)\n",
+    "pprint.pprint(r.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://synthesys.carto.com/api/v2/sql?q=WITH+gadm28+AS+%28SELECT+the_geom_webmercator%2C+iso2+FROM++gadm28_countries+WHERE+iso2+%3D+%27ES%27%29%0A++++++++++++SELECT+synthesys.inst_short+AS+institute%2C+count%28%2A%29%0A++++++++++++FROM+sanitized_data+AS+synthesys%2C+gadm28%0A++++++++++++WHERE+ST_Intersects%28gadm28.the_geom_webmercator%2C+synthesys.the_geom_webmercator%29%0A++++++++++++AND+synthesys.inst_short+IS+NOT+null%0A++++++++++++GROUP+BY+synthesys.inst_short%0A++++++++++++ORDER+BY+synthesys.count+DESC\n",
+      "{'fields': {'count': {'type': 'number'}, 'institute': {'type': 'string'}},\n",
+      " 'rows': [{'count': 60, 'institute': 'COLL'},\n",
+      "          {'count': 52, 'institute': 'NHM COL MOL'},\n",
+      "          {'count': 38, 'institute': 'NHM COL'},\n",
+      "          {'count': 29, 'institute': 'NHMW'},\n",
+      "          {'count': 28, 'institute': 'NHM AIF'},\n",
+      "          {'count': 23, 'institute': 'INST'},\n",
+      "          {'count': 23, 'institute': 'NRM'},\n",
+      "          {'count': 22, 'institute': 'COL'},\n",
+      "          {'count': 18, 'institute': 'NAT'},\n",
+      "          {'count': 15, 'institute': 'MfN COL'},\n",
+      "          {'count': 14, 'institute': 'RBINS'},\n",
+      "          {'count': 14, 'institute': 'UCPH'},\n",
+      "          {'count': 13, 'institute': 'ZBGM'},\n",
+      "          {'count': 10, 'institute': 'NHM LAB'},\n",
+      "          {'count': 9, 'institute': 'LAB'},\n",
+      "          {'count': 9, 'institute': 'RMCA'},\n",
+      "          {'count': 9, 'institute': 'KEW'},\n",
+      "          {'count': 8, 'institute': 'MfN PAL'},\n",
+      "          {'count': 7, 'institute': 'MfN ZOO'},\n",
+      "          {'count': 7, 'institute': 'NMP'},\n",
+      "          {'count': 7, 'institute': 'MfN LAB'},\n",
+      "          {'count': 7, 'institute': 'EDIN'},\n",
+      "          {'count': 7, 'institute': 'NNM'},\n",
+      "          {'count': 7, 'institute': 'BGBM COL'},\n",
+      "          {'count': 7, 'institute': 'UVA'},\n",
+      "          {'count': 6, 'institute': 'BGBM LAB'},\n",
+      "          {'count': 4, 'institute': 'IMAGE'},\n",
+      "          {'count': 4, 'institute': 'SMNS'},\n",
+      "          {'count': 4, 'institute': 'SGN COL'},\n",
+      "          {'count': 4, 'institute': 'BGBM HERB'},\n",
+      "          {'count': 3, 'institute': 'SEM'},\n",
+      "          {'count': 3, 'institute': 'PROBE'},\n",
+      "          {'count': 3, 'institute': 'EDINBURGH'},\n",
+      "          {'count': 3, 'institute': 'NHN'},\n",
+      "          {'count': 3, 'institute': 'BGBM LIVING'},\n",
+      "          {'count': 3, 'institute': 'MOL LAB'},\n",
+      "          {'count': 3, 'institute': 'MASS'},\n",
+      "          {'count': 2, 'institute': 'SGN LAB'},\n",
+      "          {'count': 2, 'institute': 'MfN MIN'},\n",
+      "          {'count': 2, 'institute': 'MORPH'},\n",
+      "          {'count': 2, 'institute': 'CBS'},\n",
+      "          {'count': 2, 'institute': 'BGBM SEM'},\n",
+      "          {'count': 2, 'institute': 'NGB'},\n",
+      "          {'count': 1, 'institute': 'ENZYME'},\n",
+      "          {'count': 1, 'institute': 'BGBM MOL LAB'}],\n",
+      " 'time': 0.667,\n",
+      " 'total_rows': 45}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Treemap widget for collection visited type: filter by country\n",
+    "iso2_var = 'ES'\n",
+    "query = f\"\"\"WITH gadm28 AS (SELECT the_geom_webmercator, iso2 FROM  gadm28_countries WHERE iso2 = '{iso2_var}')\n",
+    "            SELECT synthesys.inst_short AS institute, count(*)\n",
+    "            FROM sanitized_data AS synthesys, gadm28\n",
+    "            WHERE ST_Intersects(gadm28.the_geom_webmercator, synthesys.the_geom_webmercator)\n",
+    "            AND synthesys.inst_short IS NOT null\n",
+    "            GROUP BY synthesys.inst_short\n",
+    "            ORDER BY synthesys.count DESC\"\"\"\n",
+    "sql = {\"q\": query}\n",
+    "account = 'synthesys'\n",
+    "urlCarto = f\"https://{account}.carto.com/api/v2/sql\"\n",
+    "r = requests.get(urlCarto, params=sql)\n",
+    "print(r.url)\n",
+    "pprint.pprint(r.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://synthesys.carto.com/api/v2/sql?q=SELECT+synthesys.inst_short+AS+institute%2C+count%28%2A%29%0A++++++++++++FROM+sanitized_data+AS+synthesys%0A++++++++++++WHERE+synthesys.inst_short+IS+NOT+null%0A++++++++++++AND+synthesys.discipline+%3D+%27Humanities%27%0A++++++++++++GROUP+BY+synthesys.inst_short%0A++++++++++++ORDER+BY+synthesys.count+DESC\n",
+      "{'fields': {'count': {'type': 'number'}, 'institute': {'type': 'string'}},\n",
+      " 'rows': [{'count': 6, 'institute': 'COLL'},\n",
+      "          {'count': 5, 'institute': 'CSIC'},\n",
+      "          {'count': 5, 'institute': 'NHMW'},\n",
+      "          {'count': 3, 'institute': 'UCPH'},\n",
+      "          {'count': 3, 'institute': 'ZBGM'},\n",
+      "          {'count': 2, 'institute': 'NHM COL MOL'},\n",
+      "          {'count': 2, 'institute': 'RBINS'},\n",
+      "          {'count': 2, 'institute': 'COL'},\n",
+      "          {'count': 1, 'institute': 'SMNS'},\n",
+      "          {'count': 1, 'institute': 'NAT'},\n",
+      "          {'count': 1, 'institute': 'MASS'},\n",
+      "          {'count': 1, 'institute': 'BGBM COL'},\n",
+      "          {'count': 1, 'institute': 'NHM COL'},\n",
+      "          {'count': 1, 'institute': 'SEM'},\n",
+      "          {'count': 1, 'institute': 'LAB'},\n",
+      "          {'count': 1, 'institute': 'NMP'},\n",
+      "          {'count': 1, 'institute': 'PROBE'},\n",
+      "          {'count': 1, 'institute': 'MOL LAB'}],\n",
+      " 'time': 0.005,\n",
+      " 'total_rows': 18}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Treemap widget for collection visited type: filter by discipline\n",
+    "discipline_var = 'Humanities'\n",
+    "query = f\"\"\"SELECT synthesys.inst_short AS institute, count(*)\n",
+    "            FROM sanitized_data AS synthesys\n",
+    "            WHERE synthesys.inst_short IS NOT null\n",
+    "            AND synthesys.discipline = '{discipline_var}'\n",
+    "            GROUP BY synthesys.inst_short\n",
+    "            ORDER BY synthesys.count DESC\"\"\"\n",
+    "sql = {\"q\": query}\n",
+    "account = 'synthesys'\n",
+    "urlCarto = f\"https://{account}.carto.com/api/v2/sql\"\n",
+    "r = requests.get(urlCarto, params=sql)\n",
+    "print(r.url)\n",
+    "pprint.pprint(r.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://synthesys.carto.com/api/v2/sql?q=SELECT+synthesys.inst_short+AS+institute%2C+count%28%2A%29%0A++++++++++++FROM+sanitized_data+AS+synthesys%0A++++++++++++WHERE+synthesys.inst_short+IS+NOT+null%0A++++++++++++AND+synthesys.synth_roun+%3D+%27R1%27%0A++++++++++++GROUP+BY+synthesys.inst_short%0A++++++++++++ORDER+BY+synthesys.count+DESC\n",
+      "{'fields': {'count': {'type': 'number'}, 'institute': {'type': 'string'}},\n",
+      " 'rows': [{'count': 413, 'institute': 'NHM COL'},\n",
+      "          {'count': 203, 'institute': 'COLL'},\n",
+      "          {'count': 200, 'institute': 'ZBGM'},\n",
+      "          {'count': 193, 'institute': 'NHMW'},\n",
+      "          {'count': 190, 'institute': 'NRM'},\n",
+      "          {'count': 156, 'institute': 'CSIC'},\n",
+      "          {'count': 126, 'institute': 'NHM AIF'},\n",
+      "          {'count': 102, 'institute': 'RBINS'},\n",
+      "          {'count': 94, 'institute': 'MfN ZOO'},\n",
+      "          {'count': 81, 'institute': 'NHM LAB'},\n",
+      "          {'count': 81, 'institute': 'KEW'},\n",
+      "          {'count': 76, 'institute': 'SEM'},\n",
+      "          {'count': 76, 'institute': 'COL'},\n",
+      "          {'count': 71, 'institute': 'MOL LAB'},\n",
+      "          {'count': 71, 'institute': 'EDINBURGH'},\n",
+      "          {'count': 69, 'institute': 'NNM'},\n",
+      "          {'count': 66, 'institute': 'RMCA'},\n",
+      "          {'count': 65, 'institute': 'MfN PAL'},\n",
+      "          {'count': 62, 'institute': 'UVA'},\n",
+      "          {'count': 60, 'institute': 'PROBE'},\n",
+      "          {'count': 56, 'institute': 'NHN'},\n",
+      "          {'count': 56, 'institute': 'MASS'},\n",
+      "          {'count': 52, 'institute': 'BGBM HERB'},\n",
+      "          {'count': 39, 'institute': 'IMAGE'},\n",
+      "          {'count': 38, 'institute': 'MIZPAN'},\n",
+      "          {'count': 35, 'institute': 'CBS'},\n",
+      "          {'count': 32, 'institute': 'BGBM SEM'},\n",
+      "          {'count': 30, 'institute': 'NGB'},\n",
+      "          {'count': 29, 'institute': 'BGBM LIVING'},\n",
+      "          {'count': 27, 'institute': 'MORPH'},\n",
+      "          {'count': 27, 'institute': 'MfN MIN'},\n",
+      "          {'count': 24, 'institute': 'BGBM MOL LAB'},\n",
+      "          {'count': 15, 'institute': 'ENZYME'}],\n",
+      " 'time': 0.011,\n",
+      " 'total_rows': 33}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Treemap widget for collection visited type: filter by funding round\n",
+    "synth_round_var = 'R1'\n",
+    "query = f\"\"\"SELECT synthesys.inst_short AS institute, count(*)\n",
+    "            FROM sanitized_data AS synthesys\n",
+    "            WHERE synthesys.inst_short IS NOT null\n",
+    "            AND synthesys.synth_roun = '{synth_round_var}'\n",
+    "            GROUP BY synthesys.inst_short\n",
+    "            ORDER BY synthesys.count DESC\"\"\"\n",
     "sql = {\"q\": query}\n",
     "account = 'synthesys'\n",
     "urlCarto = f\"https://{account}.carto.com/api/v2/sql\"\n",
