added collections visited widget and more metadata description/instructions

--- a/query_examples.ipynb
+++ b/query_examples.ipynb
@@ -9,17 +9,17 @@
     "\n",
     "This notebook shows how to build the queries to the SYNTHESYS datasets, using Carto's MAP API and SQL API. We will use the data in three basic ways: 1) to build choropleths, 2) to build widgets, and 3) to build dynamic sentences.\n",
     "\n",
-    "We have created an account on Carto `synthesys`, which contains several data tables.\n",
+    "We have created an account on Carto (`synthesys`), which contains several data tables.\n",
     "1. sanitized_data : A the access dataset from SYNTHESYS. It includes geocoded points.\n",
     "1. gadm28_adm1 : the GADM28 admin 1 polygons. ISO codes are in 3 character format (var:iso)\n",
     "1. gadm28_countries  : GADM28 country polygons. ISO codes are in 2 character format (var:iso2)\n",
     "\n",
-    "We will need to create a variety of widgets from these data, including choropleth maps, donut plots, bubble plots, tree plots, time series bar charts, histograms, and an age-sex pyramid. \n",
+    "We will need to create a variety of widgets from these data, including choropleth maps, donut plots, bubble plots, treeplots, and time series bar charts. \n",
     "\n",
     "We will also use the sql api to retrieve data for dynamic text (a sentence that should include variables) detailed below.\n",
     "\n",
     "\n",
-    "## Filters\n",
+    "## Filters and Metadata\n",
     "\n",
     "When a user hits the dashboard page, they will first see an unfiltered view of the data. From this page they will be able to apply three filters: 1) Country, 2) Discipline, and 3) Funding round.\n",
     "\n",
@@ -145,6 +145,59 @@
     "{\"R1\":\"SYNTHESYS (2004 - 2009)\",\n",
     " \"R2\":\"SYNTHESYS2 (2009 - 2013)\",\n",
     " \"R3\":\"SYNTHESYS3 (2013 - 2017)\"}\n",
+    "```\n",
+    "\n",
+    "#### Institute visited\n",
+    "The access data shows visits by a person to an Institute. The institutes have a unique ID code, given in the table.attribute `sanitized_data.inst_short`. The mapping between the `inst_short` ID and human-readable name is given in the JSON below, and should be used to expose these data to the user.(I.e. the user should see the below human readable text as labels, rather than the `inst_short` ID.\n",
+    "\n",
+    "```json\n",
+    "['BGBM COL',\n",
+    "'BGBM HERB',\n",
+    "'BGBM LAB',\n",
+    "'BGBM LIVING',\n",
+    "'BGBM MOL LAB',\n",
+    "'BGBM SEM',\n",
+    "'CBS',\n",
+    "'COL',\n",
+    "'COLL',\n",
+    "'CSIC',\n",
+    "'EDIN',\n",
+    "'EDINBURGH',\n",
+    "'ENZYME',\n",
+    "'IMAGE',\n",
+    "'INST',\n",
+    "'KEW',\n",
+    "'LAB',\n",
+    "'MASS',\n",
+    "'MIZPAN',\n",
+    "'MOL LAB',\n",
+    "'MORPH',\n",
+    "'MfN COL',\n",
+    "'MfN LAB',\n",
+    "'MfN MIN',\n",
+    "'MfN PAL',\n",
+    "'MfN ZOO',\n",
+    "'NAT',\n",
+    "'NGB',\n",
+    "'NHM AIF',\n",
+    "'NHM COL',\n",
+    "'NHM COL MOL',\n",
+    "'NHM LAB',\n",
+    "'NHMW',\n",
+    "'NHN',\n",
+    "'NMP',\n",
+    "'NNM',\n",
+    "'NRM',\n",
+    "'PROBE',\n",
+    "'RBINS',\n",
+    "'RMCA',\n",
+    "'SEM',\n",
+    "'SGN COL',\n",
+    "'SGN LAB',\n",
+    "'SMNS',\n",
+    "'UCPH',\n",
+    "'UVA',\n",
+    "'ZBGM']\n",
     "```"
    ]
   },
