added sql filter examples to country choropleth section

--- a/query_examples.ipynb
+++ b/query_examples.ipynb
@@ -509,14 +509,37 @@
    "source": [
     "## Country-wide queries\n",
     "\n",
-    "The Discipline and Funding round filters should trigger Europe-wide choropleths. \n",
+    "The Discipline and Funding round filters should trigger Europe-wide choropleths. This should also be displayed by default (without any filters):\n",
     "\n",
+    "\n",
+    "* Default: no filter\n",
+    "```sql\n",
+    "WITH gadm28 AS (SELECT the_geom_webmercator, iso2 as iso FROM  gadm28_countries)\n",
+    " SELECT gadm28.the_geom_webmercator, gadm28.iso, COUNT(synthesys.home_insti) AS count\n",
+    " FROM  sanitized_data AS synthesys, gadm28\n",
+    " WHERE ST_Intersects(gadm28.the_geom_webmercator, synthesys.the_geom_webmercator)\n",
+    " GROUP BY gadm28.the_geom_webmercator, gadm28.iso\n",
+    "```\n",
+    "\n",
+    "\n",
+    "* By discipline\n",
     "```sql\n",
     "WITH gadm28 AS (SELECT the_geom_webmercator, iso2 as iso FROM  gadm28_countries)\n",
     " SELECT gadm28.the_geom_webmercator, gadm28.iso, COUNT(synthesys.home_insti) AS count\n",
     " FROM  sanitized_data AS synthesys, gadm28\n",
     " WHERE ST_Intersects(gadm28.the_geom_webmercator, synthesys.the_geom_webmercator)\n",
     " and synthesys.discipline like 'Earth Sciences & Environment'\n",
+    " GROUP BY gadm28.the_geom_webmercator, gadm28.iso\n",
+    "```\n",
+    "\n",
+    "* By funding round\n",
+    "```sql\n",
+    "WITH gadm28 AS (SELECT the_geom_webmercator, iso2 as iso FROM  gadm28_countries)\n",
+    " SELECT gadm28.the_geom_webmercator, gadm28.iso, COUNT(synthesys.home_insti) AS count\n",
+    " FROM  sanitized_data AS synthesys, gadm28\n",
+    " WHERE ST_Intersects(gadm28.the_geom_webmercator, synthesys.the_geom_webmercator)\n",
+    " AND synthesys.discipline IS NOT null\n",
+    " AND synthesys.synth_roun = 'R1'\n",
     " GROUP BY gadm28.the_geom_webmercator, gadm28.iso\n",
     "```"
    ]
@@ -643,6 +666,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can use similarly structured queries to pull back the data behind the choropleths too, to add as histograms.\n",
+    "e.g. for country counts, with a discipline filter applied:\n",
     "```sql\n",
     "WITH gadm28 as (SELECT the_geom_webmercator, iso2 AS iso, name_engli FROM  gadm28_countries)\n",
     "  SELECT gadm28.iso, gadm28.name_engli, COUNT(synthesys.home_insti)\n",
@@ -874,7 +899,9 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "account = 'synthesys'\n",
@@ -1868,7 +1895,9 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "iso2_dic = {'AL': 'Albania', 'AT': 'Austria', 'BA': 'Bosnia and Herzegovina', 'BE': 'Belgium', 'BG': 'Bulgaria', 'CH': 'Switzerland', 'CY': 'Cyprus', 'CZ': 'Czech Republic', 'DE': 'Germany', 'DK': 'Denmark', 'EE': 'Estonia', 'ES': 'Spain', 'FI': 'Finland', 'FR': 'France', 'GB': 'United Kingdom', 'GF': 'French Guiana', 'GR': 'Greece', 'HR': 'Croatia', 'HU': 'Hungary', 'IE': 'Ireland', 'IL': 'Israel', 'IS': 'Iceland', 'IT': 'Italy', 'LI': 'Liechtenstein', 'LT': 'Lithuania', 'LU': 'Luxembourg', 'LV': 'Latvia', 'MK': 'Macedonia', 'MT': 'Malta', 'NL': 'Netherlands', 'NO': 'Norway', 'PL': 'Poland', 'PS': 'Palestina', 'PT': 'Portugal', 'RE': 'Reunion', 'RO': 'Romania', 'RS': 'Serbia', 'SE': 'Sweden', 'SI': 'Slovenia', 'SK': 'Slovakia', 'TR': 'Turkey'}"
